Fri Feb  2 15:09:51 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/fnmatch.c (FOLD): Fix problem with passing signed
	chars to isupper() / tolower().

	* examples/packer/pack.c: Add GINT_TO_POINTER, GPOINTER_TO_INT
	to clear up 64-bit warnings. (#567)

Fri Feb  2 13:38:21 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmain.c (gtk_propagate_event): Fix some reference
	counting problems problems in last patch.

Fri Feb  2 13:20:12 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmain.c (gtk_propagate_event): When a grab
	widget is in effect, give the grab widget a first
	crack at KEY_PRESS/RELEASE events. (#424)

Fri Feb  2 12:02:23 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkrc.c Makefile.am: Use $(libdir), not $(exe_prefix),
	since some people set $(libdir) separately. (#1290, David Kaelbling)

Thu Feb  1 20:32:49 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdk.c: Improve warnings a bit in a fashion similar
	to the part of gtk-enf-990513-0.patch (Eric Fisher) that hasn't
	been superceded.

Thu Feb  1 18:25:46 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkfilesel.c: If PATH_MAX and MAXPATHLEN are not
	defined, define MAXPATHLEN to 2048. (The Hurd doesn't have
	MAXPATHLEN, but the code here depends on a fixed value.)
	(#4524)

Wed Jan 31 22:01:04 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkhandlebox.c (gtk_handle_box_draw): Remove a dependency
	on bin->child != NULL. (Basically, just a cleanup)

	* gtk/gtkhandlebox.c (gtk_handle_box_button_changed): Handle the case
	where child == NULL and handle_position == RIGHT or BOTTOM. (#8041)

Wed Jan 31 21:20:39 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkctree.c (real_tree_move): If the node being moved isn't
	viewable there is no way that moving the node will cause the 
	focus row to become not viewable, so omit check on the visibility
	of new_sibling, which is irrelevant. (Fixes #8002, David Helder)

Wed Jan 31 20:33:35 2001  Owen Taylor  <otaylor@redhat.com>
