@@ -401,6 +401,16 @@ gdk_rgb_set_min_colors (gint min_colors)
   gdk_rgb_min_colors = min_colors;
 }
 
+static const gchar* visual_names[] =
+{
+  "static gray",
+  "grayscale",
+  "static color",
+  "pseudo color",
+  "true color",
+  "direct color",
+};
+
 /* Return a "score" based on the following criteria (in hex):
 
    x000 is the quality - 1 is 1bpp, 2 is 4bpp,
@@ -420,16 +430,6 @@ static guint32
 gdk_rgb_score_visual (GdkVisual *visual)
 {
   guint32 quality, speed, sys, pseudo;
-  static const gchar* visual_names[] =
-  {
-    "static gray",
-    "grayscale",
-    "static color",
-    "pseudo color",
-    "true color",
-    "direct color",
-  };
-
 
   quality = 0;
   speed = 1;
@@ -572,7 +572,6 @@ gdk_rgb_allocate_images (gint        n_images,
 			 gboolean    shared)
 {
   gint i;
-  static const gint byte_order[1] = { 1 };
   
   for (i = 0; i < n_images; i++)
     {
@@ -2888,6 +2887,16 @@ gdk_rgb_select_conv (GdkImage *image)
       conv_d = gdk_rgb_convert_gray4_d_pack;
     }
 
+  if (!conv)
+    {
+      g_warning ("Visual type=%s depth=%d, image bpp=%d, %s first\n"
+		 "is not supported by GdkRGB. Please submit a bug report\n"
+		 "with the above values to bugzilla.gnome.org",
+		 visual_names[vtype], depth, bpp,
+		 byte_order == GDK_LSB_FIRST ? "lsb" : "msb");
+      exit (1);
+    }
+  
   if (conv_d == NULL)
     conv_d = conv;
 
